# qnagpt

./: .env.example  FOLLOW.md  README.md  docker-compose.yml  main.py  pyproject.toml
config/: env.py
lib/: connectS3.py  converter.py  createBucket.py  parse_pdf.py  text_cleaner.py
routes/: main.py
volume/cache/: machine.json
